// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfirmDialogLink /> when A is clicked on should render correctly 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <A
    disabled={false}
    id="mockId"
    onClick={[Function]}
    text="test link text"
  />
  <ConfirmDialog
    hide={[Function]}
    isVisible={true}
    leftAction={[Function]}
    leftMessage={
      Object {
        "defaultMessage": "No",
        "id": "app.components.ConfirmDialog.no",
      }
    }
    rightAction={[Function]}
    rightMessage={
      Object {
        "defaultMessage": "Yes",
        "id": "app.components.ConfirmDialog.yes",
      }
    }
    style={
      Object {
        "bottom": "20px",
        "left": "-10px",
        "position": "absolute",
      }
    }
  />
</div>
`;

exports[`<ConfirmDialogLink /> when dialog not active should render correctly 1`] = `
<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <A
    disabled={false}
    id="mockId"
    onClick={[Function]}
    text="test link text"
  />
  <ConfirmDialog
    hide={[Function]}
    isVisible={false}
    leftAction={[Function]}
    leftMessage={
      Object {
        "defaultMessage": "No",
        "id": "app.components.ConfirmDialog.no",
      }
    }
    rightAction={[Function]}
    rightMessage={
      Object {
        "defaultMessage": "Yes",
        "id": "app.components.ConfirmDialog.yes",
      }
    }
    style={
      Object {
        "bottom": "20px",
        "left": "-10px",
        "position": "absolute",
      }
    }
  />
</div>
`;
